# guid

./: .clang-format  .gitignore  CMakeLists.txt  Guid.cpp  Guid.h  GuidHelpData.hpp  PKGBUILD  README.md  build.sh  guid.pro  guid.qrc
.github/workflows/: build.yml
doc/: help-all.md
guid-zenity/: PKGBUILD
